--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "push": "git add . && git commit -m \"new commit\" && git push",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
